# BehaviorBox

./: .bashrc  .editorconfig  .gitattributes  .gitignore  .gitmodules  230526_124942_M_New_ContourDensity_NosePoke.mat  AGENTS.md  AddAlias.sh  Analysis.mlx  App.prj  BB Changelog.rtf  BBAppoutput.txt  BB_App.m  BBatStartup.sh  BBatStartupSecond.sh  BBstartup.m  BehaviorBoxArduino.m  BehaviorBoxData-Broken-Cross-Table.m  BehaviorBoxData.asv  BehaviorBoxData.m  BehaviorBoxDataNew.m  BehaviorBoxEyeTrack.m  BehaviorBoxMerge.m  BehaviorBoxNose.asv  BehaviorBoxNose.m  BehaviorBoxSerial.m  BehaviorBoxSerialDebug.m  BehaviorBoxSerialInput.m  BehaviorBoxSerialTime.m  BehaviorBoxSub1.m  BehaviorBoxSub2.m  BehaviorBoxSuper.asv  BehaviorBoxSuper.m  BehaviorBoxVisualGratingObject.m  BehaviorBoxVisualStimulus.m  BehaviorBoxVisualStimulusTraining.m  BehaviorBoxWheel.m  BehaviorBox_App.mlapp  BoxArduino.m  CamatStartup.sh  (+36 more)
.agent/: DATA.md  HARDWARE.md  PLANS.md  README.md  SCHEMA.md  SCIENTIFIC_CHANGELOG.md  VALIDATION.md  WORKFLOWS.md  active-plan.template.md
.codex/: config.toml
Analysis scripts/: CompareActivity.m  MatchFramesToTimestamps.m  NeuronAnalysis.m  Right_Frame_Table_Stim.csv  WhichToAverage.m
Arduino/: NosePoke.fzz
Equipment/: All-Equipment.ai  Mouse_tube_angled_botharms.stl
GPT Recommendations/: SerialIdeas.m  TextSearch.m  TextSearchFcn.m
Imaging Analysis scripts/: ConcatenateCSVs.m  CrossCorrelation.m  Left_Frame_Table_Before.csv  Left_Frame_Table_Stim.csv  MatchFramesToTimestamps.m  Right_Frame_Table_Before.csv  WBSanalysis.m
LLM recommendations/: ChangesToBB.m
Linux-Scripts/: .bash_aliases  .bash_local_CUDA  .bash_local_nogpu  .bashrc  BBatCamatStartup.sh  BBatStartup.sh  BBatStartupNoseXFCE.sh  BBatStartupPopOS.sh  BBatStartupSecond.sh  BBatStartupSecondWheel.sh  BBatStartupWheel.sh  BBatStartupWheelSecond_popos.sh  BBatStartupWheel_popos.sh  BBatStartup_popos.sh  BashrcSetup.sh  CamatStartup.sh  CamatStartup_popos.sh  DailyAnalysis.sh  FixMatlabGraphics.sh  GitSetup.sh  LinuxArd.sh  LinuxSetup.sh  crontab.txt  install_popos_autostart.sh  start-conda.sh  update_repo.sh
LiveImageAcquisition/: LiveImageAcquisition.mlapp  configureRecord.mlapp  configureSnapshot.mlapp
MockApp/: MockApp.m  MockArduino.m  MockControl.m  MockTime.m  README.md  testBehaviorBoxSaveSchemaSettingsOwner.m  testBehaviorBoxWheelConfirmChoiceGradient.m  testBehaviorBoxWheelMappingSave.m  testBehaviorBoxWheelRepeatWrongReset.m  testBehaviorBoxWheelSaveStatus.m  testBehaviorBoxWheelSetupEyeAlignment.m  testBehaviorBoxWheelStimulusGeometryUpdate.m
New Files, test first/: BehaviorBoxData.m  BehaviorBoxNose.m  BehaviorBoxSerialInput.m  BehaviorBoxVisualStimulus.m  BehaviorBoxWheel.m
Next Steps/: App settings to add  BB_App_ConsoleLog_Review_Plan.md  BehaviorBoxVisualStimulus_contour_density_pooling.diff  BehaviorBox_Debugging_Improvements.md  BehaviorBox_Feature_Outline.md  BehaviorBox_MappingStimuliPlan_hgtransform.md  DLC_EyeTracking_FrameAlignedRecord_Plan.md  DLC_EyeTracking_FrameAlignedRecord_Plan_deprecated.md  DLC_EyeTracking_MATLAB_Framework_Contract.md  DeferredPythonEyeIngestPlan.md  EyeTracking_Repo_Split_Plan.md  Map-FlashContourX_EyeTrackingSavePlan.md  MappingModes_EyeTrackingSavePlan.md
Next Steps, ChatGPT/: BehaviorBox_Debugging_Improvements.md  Wheel_Stimulus_ImagingSync_Plan.md
RecordedFrames/: Frame-0001-Pos-0.01.tiff  Frame-0004-Pos-0.04.tiff  Frame-0005-Pos-0.05.tiff  Frame-0006-Pos-0.06.tiff  Frame-0007-Pos-0.07.tiff  Frame-0008-Pos-0.08.tiff  Frame-0009-Pos-0.09.tiff  Frame-0010-Pos-0.10.tiff  Frame-0011-Pos-0.11.tiff  Frame-0012-Pos-0.12.tiff  Frame-0013-Pos-0.13.tiff  Frame-0014-Pos-0.14.tiff  Frame-0015-Pos-0.15.tiff  Frame-0016-Pos-0.16.tiff  Frame-0017-Pos-0.17.tiff  Frame-0018-Pos-0.18.tiff  Frame-0019-Pos-0.19.tiff  Frame-0020-Pos-0.20.tiff  Frame-0021-Pos-0.21.tiff  Frame-0022-Pos-0.22.tiff  Frame-0023-Pos-0.23.tiff  Frame-0024-Pos-0.24.tiff  Frame-0025-Pos-0.25.tiff  Frame-0026-Pos-0.26.tiff  Frame-0027-Pos-0.27.tiff  Frame-0028-Pos-0.28.tiff  Frame-0029-Pos-0.29.tiff  Frame-0030-Pos-0.30.tiff  Frame-0031-Pos-0.31.tiff  Frame-0032-Pos-0.32.tiff  Frame-0033-Pos-0.33.tiff  Frame-0034-Pos-0.34.tiff  Frame-0035-Pos-0.35.tiff  Frame-0036-Pos-0.36.tiff  Frame-0037-Pos-0.37.tiff  Frame-0038-Pos-0.38.tiff  Frame-0039-Pos-0.39.tiff  Frame-0040-Pos-0.40.tiff  Frame-0041-Pos-0.41.tiff  Frame-0042-Pos-0.42.tiff  (+61 more)
USB camera Apps/: Camera.m  README.md  RecordCameras.m  viewDualCameras.m
USB camera Apps/v4l_version/: CMakeLists.txt  README.md  deps_install.sh  install.sh  install_cam_link.sh  main.cpp  usbcamctl  usbcamctl.cpp  usbcamv4l
fcns/: BinomialPractice.m  EyeTrack.m  FLASHPRACTICE.m  GetDate.m  GetFilePath.m  GroupAnalysis.m  GroupAnalysisScratchpad.m  MakeAxis.m  MockBehaviorBoxNoseWaitBlink.m  PlotOldData.m  PullOut.m  RescueDataFromAGraph.m  RescueDataFromAGraphOneLevel.m  ShowAllLevels.m  (+31 more)
openCV camera app/: Build-and-Run.sh  CMakeLists.txt  InstallDeps.sh  main.cpp
openCV camera app/v4l_version/: install_deps.sh
openCV camera app/viewMultiCameras_variants/: README.md
openCV camera app/viewMultiCameras_variants/opencv_version/: README.md  install_deps_xubuntu.sh  usbcams
openCV camera app/viewMultiCameras_variants/v4l_version/: CMakeLists.txt  README.md  main.cpp  usbcamv4l
openCV camera app/viewMultiCameras_variants/viewMultiCameras_gst_gl/: CMakeLists.txt  README.md  install.sh  main.cpp  uninstall.sh
openCV camera app/viewMultiCameras_variants/viewMultiCameras_opencv_sdl/: CMakeLists.txt  README.md  install.sh  main.cpp  uninstall.sh
openCV camera app/viewMultiCameras_variants/viewMultiCameras_opencv_sdl/build-warn/: Makefile  cmake_install.cmake
openCV camera app/viewMultiCameras_variants/viewMultiCameras_v4l2_dmabuf_egl/: CMakeLists.txt  README.md  install.sh  main.cpp  uninstall.sh  viewMultiCameras_v4l2_dmabuf_egl
openCV camera app/viewMultiCameras_variants/viewMultiCameras_v4l2_dmabuf_egl/build-warn/: Makefile  cmake_install.cmake
usbcamv4l/: CMakeLists.txt  README.md  install.sh  main.cpp  recover_bad_mp4s.sh  usbcamctl.cpp
(+37 files in other folders)
